// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - DevOpsRolePage renders correctly for /devops path 1`] = `
<Page
  title="Dev Ops"
>
  <RoleBar
    label="Dev Ops"
  />
  <Section>
    <RoleContent>
      <QuoteBubble
        noCopyToClipboard={true}
        variant="thought"
      />
      <Whale
        pose="default"
      />
    </RoleContent>
  </Section>
  <ActionButtons
    role="devops"
  />
</Page>
`;

exports[`COMPONENT - DevOpsRolePage renders correctly for /devops/brag path 1`] = `
<Page
  title="Dev Ops"
>
  <RoleBar
    label="Dev Ops"
  />
  <Section>
    <RoleContent />
  </Section>
  <ActionButtons
    role="devops"
  />
</Page>
`;

exports[`COMPONENT - DevOpsRolePage renders correctly for /devops/confess path 1`] = `
<Page
  title="Dev Ops"
>
  <RoleBar
    label="Dev Ops"
  />
  <Section>
    <RoleContent />
  </Section>
  <ActionButtons
    role="devops"
  />
</Page>
`;
